[gd_scene load_steps=3 format=3 uid="uid://boio3uqw582kq"]

[ext_resource type="Script" path="res://objects/safe_zone.gd" id="1_6mf8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llbb5"]

[node name="SafeZone" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_6mf8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_llbb5")

[node name="HealTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
